# ieor4576-project2

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  cloudbuild.yaml  pyproject.toml  qa_cli.py
agents/: __init__.py  collector.py  eda_agent.py  hypothesis_agent.py  orchestrator.py
artifacts/: _script_038e2c62.py  _script_0549bc5a.py  _script_1f05c6bd.py  _script_4632a467.py  _script_46547592.py  _script_4c819c82.py  _script_57bd09ad.py  _script_8e257684.py  _script_b7ce1b52.py  _script_ebfc6e7b.py  _script_ee2dac97.py  eda.db  eda_02438fe1.db  eda_164bca04.db  eda_19a0f5cc.db  eda_378b6d5c.db  eda_3aa8fe68.db  eda_44fab2a7.db  eda_5a270b1c.db  eda_5f5e3fc1.db  eda_67df0681.db  eda_7000d26c.db  eda_71ad70c8.db  eda_7df91d8c.db  eda_87ffb6b1.db  eda_89a00fda.db  eda_8d2d2581.db  eda_93cd3e80.db  eda_a2492f3f.db  eda_ad340040.db  eda_b37ac91d.db  eda_c0221feb.db  eda_c6f74ef1.db  eda_c90b16dc.db  eda_d00905a8.db  eda_d7af3a19.db  eda_d90da11e.db  eda_dfdf7c56.db  eda_e1b443e9.db  eda_fc176b62.db  (+1 more)
frontend/: index.html
models/: __init__.py  schemas.py
pipeline/: __init__.py  collector.py  eda_agent.py  hypothesis_agent.py  orchestrator.py  peer_discovery.py  planner.py  qa_agent.py  researcher.py  sentiment_agent.py  valuation_agent.py
tests/: test_code_executor.py  test_orchestrator.py  test_orchestrator_helpers.py  test_rag_store.py  test_schemas.py  test_sec_edgar.py  test_statistics.py  test_visualizer.py
tools/: __init__.py  api_client.py  code_executor.py  market_data.py  rag_store.py  sec_edgar.py  sql_query.py  (+3 more)
(+19 files in other folders)
